FEAT container main

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 </head>
 <body>
 
-    <div class="aesthetic-container flex">
+    <div class="aesthetic-container">
         <div class="aesthetic-header"></div>
         <div class="aesthetic-main"></div>
+    </div>
+    <div class="container-main d-flex">
+        <section class="scrollbar-contacts">
+
+        </section>
+        <section class="chat flex-grow-1">
+
+        </section>
     </div>
  
 </body>
