--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/b59a747f9a.js" crossorigin="anonymous"></script>
     <title>Boolzapp</title>
 </head>
 <body>
@@ -23,7 +24,136 @@
                 
             </div>
             <div class="chat-contacts flex-grow-1">
-
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item d-flex align-items-center">
+                        <img src="./img/blackpanther.jpg" class="rounded-circle" alt="blackpanther">
+                        <div class="text px-2">
+                            <div class="d-flex justify-content-between"> 
+                                <div class="user-name">
+                                    Black panther
+                                </div>
+                                <div class="time">
+                                    12:00
+                                </div>
+                            </div>
+                            <div class="last-massage">
+                                Ultimo messaggio inviato
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item d-flex align-items-center">
+                        <img src="./img/blackwidow.jpg" class="rounded-circle" alt="blackwidow">
+                        <div class="text px-2">
+                            <div class="d-flex justify-content-between"> 
+                                <div class="user-name">
+                                    Black widow
+                                </div>
+                                <div class="time">
+                                    12:00
+                                </div>
+                            </div>
+                            <div class="last-massage">
+                                Ultimo messaggio inviato
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item d-flex align-items-center">
+                        <img src="./img/capitanamerica.jpg" class="rounded-circle" alt="capitanamerica">
+                        <div class="text px-2">
+                            <div class="d-flex justify-content-between"> 
+                                <div class="user-name">
+                                    Capitan America
+                                </div>
+                                <div class="time">
+                                    12:00
+                                </div>
+                            </div>
+                            <div class="last-massage">
+                                Ultimo messaggio inviato
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item d-flex align-items-center">
+                        <img src="./img/captainmarvel.jpg" class="rounded-circle" alt="capitanmarvel">
+                        <div class="text px-2">
+                            <div class="d-flex justify-content-between"> 
+                                <div class="user-name">
+                                    Capitan Marvel
+                                </div>
+                                <div class="time">
+                                    12:00
+                                </div>
+                            </div>
+                            <div class="last-massage">
+                                Ultimo messaggio inviato
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item d-flex align-items-center">
+                        <img src="./img/peterparker.jpg" class="rounded-circle" alt="peterparker in spiderman">
+                        <div class="text px-2">
+                            <div class="d-flex justify-content-between"> 
+                                <div class="user-name">
+                                    Peter Parker Spiderman
+                                </div>
+                                <div class="time">
+                                    12:00
+                                </div>
+                            </div>
+                            <div class="last-massage">
+                                Ultimo messaggio inviato
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item d-flex align-items-center">
+                        <img src="./img/shuri.jpg" class="rounded-circle" alt="shuri in blackpanther">
+                        <div class="text px-2">
+                            <div class="d-flex justify-content-between"> 
+                                <div class="user-name">
+                                    Shuri Black panther
+                                </div>
+                                <div class="time">
+                                    12:00
+                                </div>
+                            </div>
+                            <div class="last-massage">
+                                Ultimo messaggio inviato
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item d-flex align-items-center">
+                        <img src="./img/thanos.jpg" class="rounded-circle" alt="thanos">
+                        <div class="text px-2">
+                            <div class="d-flex justify-content-between"> 
+                                <div class="user-name">
+                                    Thanos
+                                </div>
+                                <div class="time">
+                                    12:00
+                                </div>
+                            </div>
+                            <div class="last-massage">
+                                Ultimo messaggio inviato
+                            </div>
+                        </div>
+                    </li>
+                    <li class="list-group-item d-flex align-items-center">
+                        <img src="./img/tonystark.jpg" class="rounded-circle" alt="tonystark">
+                        <div class="text px-2">
+                            <div class="d-flex justify-content-between"> 
+                                <div class="user-name">
+                                    Tony Stark Iron man
+                                </div>
+                                <div class="time">
+                                    12:00
+                                </div>
+                            </div>
+                            <div class="last-massage">
+                                Ultimo messaggio inviato
+                            </div>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </section>
         <section class="chat-section flex-grow-1 d-flex flex-column">
