FEAT notifica avviso

--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
             <div class="bar">
                 
             </div>
-            <div class="notificationsonoff">
-                
+            <div class="notificationsonoff d-flex align-items-center">
+                <i class="bell fa-regular fa-bell-slash rounded-circle"></i>
+                <div class="text-notification px-2">
+                    <div class="text">
+                        Ricevi notifiche di nuovi messaggio
+                    </div>
+                    <a class="a-text">
+                        Attiva notifiche Desktop
+                    </a>
+                </div>
             </div>
             <div class="chat-contacts flex-grow-1">
                 <ul class="list-group list-group-flush">
