FEAT Chat message

--- a/index.html
+++ b/index.html
@@ -209,6 +209,33 @@
             </div>
             <div class="chat flex-grow-1">
 
+                <div class="card card-green mt-5 mb-2 ms-5 ">
+                    <div class="card-body">
+                      <p class="card-text">Hai portato duori il cane?</p>
+                    </div>
+                    <div class="time">
+                        11:20
+                    </div>
+                </div>
+
+                <div class="card card-green mb-3 ms-5 ">
+                    <div class="card-body">
+                      <p class="card-text">e il pranzo, lo hai preparato?</p>
+                    </div>
+                    <div class="time">
+                        11:22
+                    </div>
+                </div>
+
+                <div class="card mb-3 ms-5">
+                    <div class="card-body">
+                      <p class="card-text">Tutto fatto!</p>
+                    </div>
+                    <div class="time">
+                        11:30
+                    </div>
+                </div>
+
             </div>
             <div class="input-chat">
                 <div class="row align-items-center">
