CORRECT cognome Davers

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             <div class="text px-2">
                                 <div class="d-flex justify-content-between"> 
                                     <div class="user-name">
-                                        Carol Darverson
+                                        Carol Darvers
                                     </div>
                                     <div class="time">
                                         12:00
