FEAT hover chat-contacts

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                     <div class="user-name">
                                         Shuri
                                     </div>
-                                    <div class="last-massage">
+                                    <div class="last-access">
                                         Ultimo accesso di oggi alle 12:00
                                     </div>
                                 </div>
