--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             <input type="text" class="form-control" id="colFormLabel" 
                             placeholder="Scrivi un messaggio"
                             v-model="inputValue"
-                            @keyup.enter="addTask"
+                            @keyup.enter="addMessage"
                             >
                           </div>
                         <div class="col-1">
